--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -2,5 +2,7 @@
   "item.tutorialmod.sapphire": "Sapphire",
   "item.tutorialmod.raw_sapphire": "Raw Sapphire",
 
-  "creativetab.tutorial_tab": "Sapphire Creative Tab"
+  "creativetab.tutorial_tab": "Sapphire Creative Tab",
+  "block.tutorialmod.sapphire_block": "Block of Sapphire",
+  "block.tutorialmod.raw_sapphire_block": "Raw block of Sapphire"
 }
