--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -4,5 +4,9 @@
 
   "creativetab.tutorial_tab": "Sapphire Creative Tab",
   "block.tutorialmod.sapphire_block": "Block of Sapphire",
-  "block.tutorialmod.raw_sapphire_block": "Raw block of Sapphire"
+  "block.tutorialmod.raw_sapphire_block": "Raw block of Sapphire",
+  "block.tutorialmod.sapphire_ore": "Sapphire Ore",
+  "block.tutorialmod.deepslate_sapphire_ore": "Deepslate Sapphire Ore",
+  "block.tutorialmod.nether_sapphire_ore": "Nether Sapphire Ore",
+  "block.tutorialmod.end_stone_sapphire_ore": "Endstone Sapphire Ore"
 }
