--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "item.tutorialmod.sapphire": "Sapphire",
   "item.tutorialmod.raw_sapphire": "Raw Sapphire",
+  "item.tutorialmod.metal_detector": "Metal Detector",
 
   "creativetab.tutorial_tab": "Sapphire Creative Tab",
   "block.tutorialmod.sapphire_block": "Block of Sapphire",
