--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -9,5 +9,6 @@
   "block.tutorialmod.sapphire_ore": "Sapphire Ore",
   "block.tutorialmod.deepslate_sapphire_ore": "Deepslate Sapphire Ore",
   "block.tutorialmod.nether_sapphire_ore": "Nether Sapphire Ore",
-  "block.tutorialmod.end_stone_sapphire_ore": "Endstone Sapphire Ore"
+  "block.tutorialmod.end_stone_sapphire_ore": "Endstone Sapphire Ore",
+  "block.tutorialmod.sound_block": "Sound Block"
 }
