--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -2,6 +2,8 @@
   "item.tutorialmod.sapphire": "Sapphire",
   "item.tutorialmod.raw_sapphire": "Raw Sapphire",
   "item.tutorialmod.metal_detector": "Metal Detector",
+  "item.tutorialmod.strawberry": "Strawberry",
+  "item.tutorialmod.pine_cone": "Pine Cone",
 
   "creativetab.tutorial_tab": "Sapphire Creative Tab",
   "block.tutorialmod.sapphire_block": "Block of Sapphire",
@@ -10,5 +12,7 @@
   "block.tutorialmod.deepslate_sapphire_ore": "Deepslate Sapphire Ore",
   "block.tutorialmod.nether_sapphire_ore": "Nether Sapphire Ore",
   "block.tutorialmod.end_stone_sapphire_ore": "Endstone Sapphire Ore",
-  "block.tutorialmod.sound_block": "Sound Block"
+  "block.tutorialmod.sound_block": "Sound Block",
+
+  "tooltip.tutorialmod.metal_detector.tooltip": "Detects Ores underground en report their position"
 }
