--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -14,5 +14,16 @@
   "block.tutorialmod.end_stone_sapphire_ore": "Endstone Sapphire Ore",
   "block.tutorialmod.sound_block": "Sound Block",
 
-  "tooltip.tutorialmod.metal_detector.tooltip": "Detects Ores underground en report their position"
+  "tooltip.tutorialmod.metal_detector.tooltip": "Detects Ores underground en report their position",
+
+
+  "block.tutorialmod.sapphire_stairs": "Sapphire Stairs",
+  "block.tutorialmod.sapphire_slab": "Sapphire Slab",
+  "block.tutorialmod.sapphire_button": "Sapphire Button",
+  "block.tutorialmod.sapphire_pressure_plate": "Sapphire Pressure Plate",
+  "block.tutorialmod.sapphire_fence": "Sapphire Fence",
+  "block.tutorialmod.sapphire_fence_gate": "Sapphire Fence Gate",
+  "block.tutorialmod.sapphire_wall": "Sapphire Wall",
+  "block.tutorialmod.sapphire_door": "Sapphire Door",
+  "block.tutorialmod.sapphire_trapdoor": "Sapphire Trap Door"
 }
