--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -4,6 +4,7 @@
   "item.tutorialmod.metal_detector": "Metal Detector",
   "item.tutorialmod.strawberry": "Strawberry",
   "item.tutorialmod.pine_cone": "Pine Cone",
+  "item.tutorialmod.sapphire_staff": "Sapphire Staff",
 
   "creativetab.tutorial_tab": "Sapphire Creative Tab",
   "block.tutorialmod.sapphire_block": "Block of Sapphire",
