--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -15,6 +15,8 @@
   "block.tutorialmod.end_stone_sapphire_ore": "Endstone Sapphire Ore",
   "block.tutorialmod.sound_block": "Sound Block",
 
+  "item.tutorialmod.strawberry_seeds": "Strawberry Seeds",
+
 
   "item.tutorialmod.sapphire_sword": "Sapphire Sword",
   "item.tutorialmod.sapphire_pickaxe": "Sapphire Pickaxe",
